[gd_scene load_steps=8 format=2]

[ext_resource path="res://Shared-Scripts/WeakPoint.gd" type="Script" id=1]
[ext_resource path="res://Shared-Scripts/InvulnFlicker.gd" type="Script" id=2]
[ext_resource path="res://assets/icon.png" type="Texture" id=3]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.0
height = 48.0

[sub_resource type="Animation" id=3]
resource_name = "Invuln Flicker"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 72, 32 )

[node name="Model" type="Node2D"]
position = Vector2( 800, 800 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.90735e-06, 4.00001 )
scale = Vector2( 2.25, 1.375 )
frames = SubResource( 1 )

[node name="WeakPoint" type="Area2D" parent="."]
collision_mask = 513
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeakPoint"]
position = Vector2( -6.10352e-05, -40.0001 )
shape = SubResource( 2 )

[node name="InvulnFlicker" type="AnimationPlayer" parent="."]
"anims/Invuln Flicker" = SubResource( 3 )
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 16 )
shape = SubResource( 4 )
[connection signal="area_entered" from="WeakPoint" to="WeakPoint" method="onAreaEntered"]
[connection signal="area_exited" from="WeakPoint" to="WeakPoint" method="onAreaExited"]
